<resources>
    <string name="app_name">payway</string>
    <string name="paypal_integration_in_android">Paypal Integration in Android</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="my_cart">My Cart</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_bar">nav_bar</string>
    <string name="watches">watches</string>
    <string name="t_shorts">T-shorts</string>
    <string name="shoos">Shoos</string>
    <string name="backpack">backpack</string>
    <string name="top_categories">Top Categories</string>
    <string name="lets_gets_somethings">Let\'s get you Somethings?</string>
    <string name="hello_khalil">Hello khalil !</string>
    <string name="other_new_products">other new Products</string>
    <string name="logout">logout</string>
    <string name="otp">OTP</string>
    <string name="horizental_scrolling">Horizental scrolling</string>
    <string name="es_market">ES Market</string>
    <string name="product_past_price">Product past Price</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">product price</string>
    <string name="_30_off">30% OFF</string>
    <string name="available_in_stock">Available in stock</string>
    <string name="about">About</string>
    <string name="description">description</string>
    <string name="past">past_</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="favorites">Favorite</string>
    <string name="remove_from_cart">Remove from cart</string>
    <string name="have_a_look">Have a look on my Github</string>
    <string name="hello">Hello</string>
    <string name="hi_i_am_the_developer">Hi \uD83D\uDC4B, I am the developer</string>

</resources>