<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities_and_fragments.fragments.Profile">

    <TextView
        android:id="@+id/mee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/developer"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="-120dp"
        android:text="@string/hi_i_am_the_developer"
        android:textAlignment="center"
        android:textColor="@color/orange"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/developer"
        android:layout_width="298dp"
        android:layout_height="298dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="58dp"
        android:layout_marginTop="162dp"
        android:layout_marginEnd="55dp"
        android:src="@drawable/undraw_feeling_proud_qne1" />

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_below="@id/developer"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="16dp"
        android:text="@string/logout"
        android:textAlignment="center"
        android:background="@drawable/rounded_button"
        android:drawableLeft="@drawable/logout"
        />

    <Button
        android:id="@+id/gethubrepo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/developer"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_button"
        android:drawableLeft="@drawable/github_svgrepo_com"
        android:drawableTint="@color/white"
        android:text="@string/have_a_look" />


</RelativeLayout>