<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.Payway">

    <!-- Action Bar -->
    <RelativeLayout
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="22dp"
        android:background="@color/white">

        <!-- Search icon -->
        <ImageView
            android:id="@+id/search_icon"
            android:layout_width="37dp"
            android:layout_height="37dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/ic_search"
            android:backgroundTint="#ECE9E9"
            android:background="@drawable/rounded_gray_background"/>

        <!-- Control icon -->
        <ImageView
            android:id="@+id/control_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_toRightOf="@id/control_icon"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="7dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:src="@drawable/ic_mac_ctrl"
            android:backgroundTint="#ECE9E9"
            android:background="@drawable/rounded_gray_background"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/hellos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_khalil"
        android:textSize="26sp"
        android:layout_below="@+id/action_bar"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:textColor="@color/black"
        />
    <TextView
        android:id="@+id/lets_get"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lets_gets_somethings"
        android:textSize="18sp"
        android:layout_below="@+id/hellos"
        android:layout_marginStart="16dp"
        />


    <HorizontalScrollView
        android:id="@+id/ads_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lets_get"
        android:contentDescription="@string/horizental_scrolling"
        android:scrollbars="none">    <!-- Horizontal Scroll View for Menu -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:orientation="horizontal">
        <TextView
                android:id="@+id/ads"
                android:layout_width="170dp"
                android:layout_height="100dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="21dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/rounded_gray_background"
                android:text="@string/other_new_products"
                android:textSize="35sp" />
            <TextView
                android:id="@+id/ads1"
                android:layout_width="170dp"
                android:layout_height="100dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="23dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/rounded_gray_background"
                android:text="@string/other_new_products"
                android:textSize="35sp" />
            <TextView
                android:id="@+id/ads2"
                android:layout_width="170dp"
                android:layout_height="100dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="23dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/rounded_gray_background"
                android:text="@string/other_new_products"
                android:textSize="35sp" />
        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/top_categories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ads_menu"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/top_categories"
        android:textColor="@color/black"
        android:textSize="20sp" />


    <HorizontalScrollView
        android:id="@+id/category_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top_categories"
        android:contentDescription="@string/horizental_scrolling"
        android:scrollbars="none">
    <!-- Horizontal Scroll View for Menu -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/wacthes"
                android:padding="8dp"
                android:layout_marginStart="16dp"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/watch_svgrepo_com"
                android:background="@drawable/rounded_gray_background"
                />

            <ImageView
                android:id="@+id/T_shorts"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/short_sleeve_svgrepo_com__1_"
                android:padding="8dp"
                android:layout_marginStart="17dp"
                android:background="@drawable/rounded_gray_background"/>
            <ImageView
                android:id="@+id/caps"
                android:padding="8dp"
                android:layout_marginStart="17dp"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/cap_svgrepo_com"
                android:background="@drawable/rounded_gray_background"
                />
            <ImageView
                android:id="@+id/jacket"
                android:padding="8dp"
                android:layout_marginStart="17dp"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/jacket_illustration_2_svgrepo_com"
                android:background="@drawable/rounded_gray_background"
                />
            <ImageView
                android:id="@+id/backpack"
                android:padding="8dp"
                android:layout_marginStart="17dp"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/backpack_bag_holidays_svgrepo_com"
                android:background="@drawable/rounded_gray_background"
                />
            <ImageView
                android:id="@+id/shoas"
                android:padding="8dp"
                android:layout_marginStart="17dp"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/shoe_store_svgrepo_com"
                android:background="@drawable/rounded_gray_background"
                />

            <ImageView
                android:id="@+id/shorts"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="17dp"
                android:padding="8dp"
                android:src="@drawable/short_jeans_clothing_wear_cloth_fashion_svgrepo_com"
                android:background="@drawable/rounded_gray_background"/>

        </LinearLayout>
    </HorizontalScrollView>
    <!-- Vertical Scroll View for Products -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:layout_below="@+id/category_menu"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:scrollbars="vertical"
        />


</RelativeLayout>

